# ros2-example

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.roo/rules/: 01-context.md  02-ros.md
src/clock_follow_launch/: CMakeLists.txt  README.md  package.xml
src/clock_follow_launch/include/clock_follow_launch/: vel_relay_node.hpp
src/clock_follow_launch/launch/: clock_follow.launch.py
src/clock_follow_launch/src/: vel_relay.cpp  vel_relay_node.cpp
src/clock_pose_issuer/: CMakeLists.txt  README.md  package.xml
src/clock_pose_issuer/include/clock_pose_issuer/: clock_pose_issuer_node.hpp
src/clock_pose_issuer/launch/: clock_pose_issuer.launch.py
src/clock_pose_issuer/src/: clock_pose_issuer.cpp  clock_pose_issuer_node.cpp
src/clock_pose_issuer/test/: test_clock_pose_integration.cpp  test_clock_pose_issuer.cpp
src/gui_pose_issuer/: README.md  package.xml  setup.cfg  setup.py
src/gui_pose_issuer/gui_pose_issuer/: clock_widget.py  gui_pose_issuer_node.py  pose_calculator.py
src/gui_pose_issuer/launch/: gui_pose_issuer.launch.py
src/gui_pose_issuer/test/: test_gui_pose_issuer.py  test_pose_calculator.py
src/motion_controller/: CMakeLists.txt  README.md  package.xml
src/motion_controller/include/motion_controller/: motion_controller.hpp  motion_controller_node.hpp
src/motion_controller/launch/: motion_controller.launch.py
src/motion_controller/src/: motion_controller.cpp  motion_controller_node.cpp
src/motion_controller/test/: test_motion_controller.cpp  test_motion_controller_integration.cpp
